[package]
name = "crosspoint-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crosspoint-cli"
path = "src/main.rs"

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang = "0.30.1"
clap = { version = "4", features = ["derive"] }
solana-sdk = "1.18"
spl-token-2022 = { version = "3", features = ["no-entrypoint"] }
spl-associated-token-account = "3"
anyhow = "1"
